src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones : definicion
   3               | definiciones definicion

   4  definicion : definicion_variable
   5             | definicion_struct
   6             | definicion_funcion
   7             | definicion_procedimiento

   8  definiciones_variable_opc :
   9                            | definiciones_variable

  10  definiciones_variable : definiciones_variable definicion_variable
  11                        | definicion_variable

  12  definicion_variable : DIM IDENT array_opc AS tipo ';'

  13  array_opc :
  14            | lista_dimensiones

  15  lista_dimensiones : '[' CTE_ENTERA ']'
  16                    | lista_dimensiones '[' CTE_ENTERA ']'

  17  definicion_struct : TYPE IDENT lista_campos END TYPE ';'

  18  definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional ')' AS tipo definiciones_variable_opc sentencias_opc END FUNCTION ';'

  19  definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional ')' definiciones_variable_opc sentencias_opc END PROC ';'

  20  listaParametrosOpcional :
  21                          | listaParametros

  22  listaParametros : listaParametros ',' IDENT AS tipo
  23                  | IDENT AS tipo

  24  sentencias_opc :
  25                 | sentencias

  26  sentencias : sentencias sentencia
  27             | sentencia

  28  sentencia : PRINT expresion ';'
  29            | READ expresion ';'
  30            | expresion '=' expresion ';'
  31            | RETURN expresion ';'
  32            | RETURN ';'
  33            | WHILE expresion DO sentencias_opc END WHILE ';'
  34            | IF expresion THEN sentencias_opc END IF ';'
  35            | IF expresion THEN sentencias_opc ELSE sentencias_opc END IF ';'
  36            | IDENT '(' expresiones_opc ')' ';'

  37  expresiones_opc :
  38                  | expresiones

  39  expresiones : expresiones ',' expresion
  40              | expresion

  41  expresion : IDENT
  42            | CTE_ENTERA
  43            | CHARACTER
  44            | REAL
  45            | expresion '+' expresion
  46            | expresion '-' expresion
  47            | expresion '*' expresion
  48            | expresion '/' expresion
  49            | expresion '%' expresion
  50            | expresion '[' expresion ']'
  51            | expresion '.' expresion
  52            | expresion '<' expresion
  53            | expresion '>' expresion
  54            | '(' expresion ')'
  55            | expresion MENORIGUAL expresion
  56            | expresion MAYORIGUAL expresion
  57            | expresion AND expresion
  58            | expresion OR expresion
  59            | NOT expresion
  60            | expresion IGUALDAD expresion
  61            | expresion DISTINTO expresion
  62            | IDENT '(' expresiones_opc ')'
  63            | CTYPE '(' tipo ',' expresion ')'

  64  tipo : INTEGER
  65       | REAL
  66       | CHARACTER
  67       | IDENT

  68  lista_campos : campo
  69               | lista_campos campo

  70  campo : IDENT array_opc AS tipo ';'

state 0
	$accept : . programa $end  (0)

	DIM  shift 1
	FUNCTION  shift 2
	PROC  shift 3
	TYPE  shift 4
	.  error

	programa  goto 5
	definiciones  goto 6
	definicion  goto 7
	definicion_variable  goto 8
	definicion_struct  goto 9
	definicion_funcion  goto 10
	definicion_procedimiento  goto 11


state 1
	definicion_variable : DIM . IDENT array_opc AS tipo ';'  (12)

	IDENT  shift 12
	.  error


state 2
	definicion_funcion : FUNCTION . IDENT '(' listaParametrosOpcional ')' AS tipo definiciones_variable_opc sentencias_opc END FUNCTION ';'  (18)

	IDENT  shift 13
	.  error


state 3
	definicion_procedimiento : PROC . IDENT '(' listaParametrosOpcional ')' definiciones_variable_opc sentencias_opc END PROC ';'  (19)

	IDENT  shift 14
	.  error


state 4
	definicion_struct : TYPE . IDENT lista_campos END TYPE ';'  (17)

	IDENT  shift 15
	.  error


state 5
	$accept : programa . $end  (0)

	$end  accept


state 6
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (3)

	DIM  shift 1
	FUNCTION  shift 2
	PROC  shift 3
	TYPE  shift 4
	$end  reduce 1

	definicion  goto 16
	definicion_variable  goto 8
	definicion_struct  goto 9
	definicion_funcion  goto 10
	definicion_procedimiento  goto 11


state 7
	definiciones : definicion .  (2)

	.  reduce 2


state 8
	definicion : definicion_variable .  (4)

	.  reduce 4


state 9
	definicion : definicion_struct .  (5)

	.  reduce 5


state 10
	definicion : definicion_funcion .  (6)

	.  reduce 6


state 11
	definicion : definicion_procedimiento .  (7)

	.  reduce 7


state 12
	definicion_variable : DIM IDENT . array_opc AS tipo ';'  (12)
	array_opc : .  (13)

	'['  shift 17
	AS  reduce 13

	array_opc  goto 18
	lista_dimensiones  goto 19


state 13
	definicion_funcion : FUNCTION IDENT . '(' listaParametrosOpcional ')' AS tipo definiciones_variable_opc sentencias_opc END FUNCTION ';'  (18)

	'('  shift 20
	.  error


state 14
	definicion_procedimiento : PROC IDENT . '(' listaParametrosOpcional ')' definiciones_variable_opc sentencias_opc END PROC ';'  (19)

	'('  shift 21
	.  error


state 15
	definicion_struct : TYPE IDENT . lista_campos END TYPE ';'  (17)

	IDENT  shift 22
	.  error

	lista_campos  goto 23
	campo  goto 24


state 16
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 17
	lista_dimensiones : '[' . CTE_ENTERA ']'  (15)

	CTE_ENTERA  shift 25
	.  error


state 18
	definicion_variable : DIM IDENT array_opc . AS tipo ';'  (12)

	AS  shift 26
	.  error


state 19
	array_opc : lista_dimensiones .  (14)
	lista_dimensiones : lista_dimensiones . '[' CTE_ENTERA ']'  (16)

	'['  shift 27
	AS  reduce 14


state 20
	definicion_funcion : FUNCTION IDENT '(' . listaParametrosOpcional ')' AS tipo definiciones_variable_opc sentencias_opc END FUNCTION ';'  (18)
	listaParametrosOpcional : .  (20)

	IDENT  shift 28
	')'  reduce 20

	listaParametrosOpcional  goto 29
	listaParametros  goto 30


state 21
	definicion_procedimiento : PROC IDENT '(' . listaParametrosOpcional ')' definiciones_variable_opc sentencias_opc END PROC ';'  (19)
	listaParametrosOpcional : .  (20)

	IDENT  shift 28
	')'  reduce 20

	listaParametrosOpcional  goto 31
	listaParametros  goto 30


state 22
	campo : IDENT . array_opc AS tipo ';'  (70)
	array_opc : .  (13)

	'['  shift 17
	AS  reduce 13

	array_opc  goto 32
	lista_dimensiones  goto 19


state 23
	definicion_struct : TYPE IDENT lista_campos . END TYPE ';'  (17)
	lista_campos : lista_campos . campo  (69)

	IDENT  shift 22
	END  shift 33
	.  error

	campo  goto 34


state 24
	lista_campos : campo .  (68)

	.  reduce 68


state 25
	lista_dimensiones : '[' CTE_ENTERA . ']'  (15)

	']'  shift 35
	.  error


state 26
	definicion_variable : DIM IDENT array_opc AS . tipo ';'  (12)

	IDENT  shift 36
	INTEGER  shift 37
	REAL  shift 38
	CHARACTER  shift 39
	.  error

	tipo  goto 40


state 27
	lista_dimensiones : lista_dimensiones '[' . CTE_ENTERA ']'  (16)

	CTE_ENTERA  shift 41
	.  error


state 28
	listaParametros : IDENT . AS tipo  (23)

	AS  shift 42
	.  error


state 29
	definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional . ')' AS tipo definiciones_variable_opc sentencias_opc END FUNCTION ';'  (18)

	')'  shift 43
	.  error


state 30
	listaParametrosOpcional : listaParametros .  (21)
	listaParametros : listaParametros . ',' IDENT AS tipo  (22)

	','  shift 44
	')'  reduce 21


state 31
	definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional . ')' definiciones_variable_opc sentencias_opc END PROC ';'  (19)

	')'  shift 45
	.  error


state 32
	campo : IDENT array_opc . AS tipo ';'  (70)

	AS  shift 46
	.  error


state 33
	definicion_struct : TYPE IDENT lista_campos END . TYPE ';'  (17)

	TYPE  shift 47
	.  error


state 34
	lista_campos : lista_campos campo .  (69)

	.  reduce 69


state 35
	lista_dimensiones : '[' CTE_ENTERA ']' .  (15)

	.  reduce 15


state 36
	tipo : IDENT .  (67)

	.  reduce 67


state 37
	tipo : INTEGER .  (64)

	.  reduce 64


state 38
	tipo : REAL .  (65)

	.  reduce 65


state 39
	tipo : CHARACTER .  (66)

	.  reduce 66


state 40
	definicion_variable : DIM IDENT array_opc AS tipo . ';'  (12)

	';'  shift 48
	.  error


state 41
	lista_dimensiones : lista_dimensiones '[' CTE_ENTERA . ']'  (16)

	']'  shift 49
	.  error


state 42
	listaParametros : IDENT AS . tipo  (23)

	IDENT  shift 36
	INTEGER  shift 37
	REAL  shift 38
	CHARACTER  shift 39
	.  error

	tipo  goto 50


state 43
	definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional ')' . AS tipo definiciones_variable_opc sentencias_opc END FUNCTION ';'  (18)

	AS  shift 51
	.  error


state 44
	listaParametros : listaParametros ',' . IDENT AS tipo  (22)

	IDENT  shift 52
	.  error


state 45
	definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional ')' . definiciones_variable_opc sentencias_opc END PROC ';'  (19)
	definiciones_variable_opc : .  (8)

	DIM  shift 1
	IDENT  reduce 8
	REAL  reduce 8
	CHARACTER  reduce 8
	CTE_ENTERA  reduce 8
	PRINT  reduce 8
	END  reduce 8
	IF  reduce 8
	WHILE  reduce 8
	RETURN  reduce 8
	READ  reduce 8
	NOT  reduce 8
	CTYPE  reduce 8
	'('  reduce 8

	definicion_variable  goto 53
	definiciones_variable_opc  goto 54
	definiciones_variable  goto 55


state 46
	campo : IDENT array_opc AS . tipo ';'  (70)

	IDENT  shift 36
	INTEGER  shift 37
	REAL  shift 38
	CHARACTER  shift 39
	.  error

	tipo  goto 56


state 47
	definicion_struct : TYPE IDENT lista_campos END TYPE . ';'  (17)

	';'  shift 57
	.  error


state 48
	definicion_variable : DIM IDENT array_opc AS tipo ';' .  (12)

	.  reduce 12


state 49
	lista_dimensiones : lista_dimensiones '[' CTE_ENTERA ']' .  (16)

	.  reduce 16


state 50
	listaParametros : IDENT AS tipo .  (23)

	.  reduce 23


state 51
	definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional ')' AS . tipo definiciones_variable_opc sentencias_opc END FUNCTION ';'  (18)

	IDENT  shift 36
	INTEGER  shift 37
	REAL  shift 38
	CHARACTER  shift 39
	.  error

	tipo  goto 58


state 52
	listaParametros : listaParametros ',' IDENT . AS tipo  (22)

	AS  shift 59
	.  error


state 53
	definiciones_variable : definicion_variable .  (11)

	.  reduce 11


state 54
	definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional ')' definiciones_variable_opc . sentencias_opc END PROC ';'  (19)
	sentencias_opc : .  (24)

	IDENT  shift 60
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	PRINT  shift 64
	IF  shift 65
	WHILE  shift 66
	RETURN  shift 67
	READ  shift 68
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	END  reduce 24

	sentencias_opc  goto 72
	sentencias  goto 73
	sentencia  goto 74
	expresion  goto 75


state 55
	definiciones_variable_opc : definiciones_variable .  (9)
	definiciones_variable : definiciones_variable . definicion_variable  (10)

	DIM  shift 1
	IDENT  reduce 9
	REAL  reduce 9
	CHARACTER  reduce 9
	CTE_ENTERA  reduce 9
	PRINT  reduce 9
	END  reduce 9
	IF  reduce 9
	WHILE  reduce 9
	RETURN  reduce 9
	READ  reduce 9
	NOT  reduce 9
	CTYPE  reduce 9
	'('  reduce 9

	definicion_variable  goto 76


state 56
	campo : IDENT array_opc AS tipo . ';'  (70)

	';'  shift 77
	.  error


state 57
	definicion_struct : TYPE IDENT lista_campos END TYPE ';' .  (17)

	.  reduce 17


state 58
	definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional ')' AS tipo . definiciones_variable_opc sentencias_opc END FUNCTION ';'  (18)
	definiciones_variable_opc : .  (8)

	DIM  shift 1
	IDENT  reduce 8
	REAL  reduce 8
	CHARACTER  reduce 8
	CTE_ENTERA  reduce 8
	PRINT  reduce 8
	END  reduce 8
	IF  reduce 8
	WHILE  reduce 8
	RETURN  reduce 8
	READ  reduce 8
	NOT  reduce 8
	CTYPE  reduce 8
	'('  reduce 8

	definicion_variable  goto 53
	definiciones_variable_opc  goto 78
	definiciones_variable  goto 55


state 59
	listaParametros : listaParametros ',' IDENT AS . tipo  (22)

	IDENT  shift 36
	INTEGER  shift 37
	REAL  shift 38
	CHARACTER  shift 39
	.  error

	tipo  goto 79


state 60
	sentencia : IDENT . '(' expresiones_opc ')' ';'  (36)
	expresion : IDENT .  (41)
	expresion : IDENT . '(' expresiones_opc ')'  (62)

	'('  shift 80
	MAYORIGUAL  reduce 41
	MENORIGUAL  reduce 41
	DISTINTO  reduce 41
	IGUALDAD  reduce 41
	AND  reduce 41
	OR  reduce 41
	'='  reduce 41
	'<'  reduce 41
	'>'  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'%'  reduce 41
	'['  reduce 41
	'.'  reduce 41


state 61
	expresion : REAL .  (44)

	.  reduce 44


state 62
	expresion : CHARACTER .  (43)

	.  reduce 43


state 63
	expresion : CTE_ENTERA .  (42)

	.  reduce 42


state 64
	sentencia : PRINT . expresion ';'  (28)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 82


state 65
	sentencia : IF . expresion THEN sentencias_opc END IF ';'  (34)
	sentencia : IF . expresion THEN sentencias_opc ELSE sentencias_opc END IF ';'  (35)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 83


state 66
	sentencia : WHILE . expresion DO sentencias_opc END WHILE ';'  (33)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 84


state 67
	sentencia : RETURN . expresion ';'  (31)
	sentencia : RETURN . ';'  (32)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	';'  shift 85
	.  error

	expresion  goto 86


state 68
	sentencia : READ . expresion ';'  (29)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 87


state 69
	expresion : NOT . expresion  (59)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 88


state 70
	expresion : CTYPE . '(' tipo ',' expresion ')'  (63)

	'('  shift 89
	.  error


state 71
	expresion : '(' . expresion ')'  (54)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 90


state 72
	definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional ')' definiciones_variable_opc sentencias_opc . END PROC ';'  (19)

	END  shift 91
	.  error


state 73
	sentencias_opc : sentencias .  (25)
	sentencias : sentencias . sentencia  (26)

	IDENT  shift 60
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	PRINT  shift 64
	IF  shift 65
	WHILE  shift 66
	RETURN  shift 67
	READ  shift 68
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	END  reduce 25
	ELSE  reduce 25

	sentencia  goto 92
	expresion  goto 75


state 74
	sentencias : sentencia .  (27)

	.  reduce 27


state 75
	sentencia : expresion . '=' expresion ';'  (30)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (55)
	expresion : expresion . MAYORIGUAL expresion  (56)
	expresion : expresion . AND expresion  (57)
	expresion : expresion . OR expresion  (58)
	expresion : expresion . IGUALDAD expresion  (60)
	expresion : expresion . DISTINTO expresion  (61)

	MAYORIGUAL  shift 93
	MENORIGUAL  shift 94
	DISTINTO  shift 95
	IGUALDAD  shift 96
	AND  shift 97
	OR  shift 98
	'='  shift 99
	'<'  shift 100
	'>'  shift 101
	'+'  shift 102
	'-'  shift 103
	'*'  shift 104
	'/'  shift 105
	'%'  shift 106
	'['  shift 107
	'.'  shift 108
	.  error


state 76
	definiciones_variable : definiciones_variable definicion_variable .  (10)

	.  reduce 10


state 77
	campo : IDENT array_opc AS tipo ';' .  (70)

	.  reduce 70


state 78
	definicion_funcion : FUNCTION IDENT '(' listaParametrosOpcional ')' AS tipo definiciones_variable_opc . sentencias_opc END FUNCTION ';'  (18)
	sentencias_opc : .  (24)

	IDENT  shift 60
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	PRINT  shift 64
	IF  shift 65
	WHILE  shift 66
	RETURN  shift 67
	READ  shift 68
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	END  reduce 24

	sentencias_opc  goto 109
	sentencias  goto 73
	sentencia  goto 74
	expresion  goto 75


state 79
	listaParametros : listaParametros ',' IDENT AS tipo .  (22)

	.  reduce 22


state 80
	sentencia : IDENT '(' . expresiones_opc ')' ';'  (36)
	expresion : IDENT '(' . expresiones_opc ')'  (62)
	expresiones_opc : .  (37)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	')'  reduce 37

	expresion  goto 110
	expresiones_opc  goto 111
	expresiones  goto 112


state 81
	expresion : IDENT .  (41)
	expresion : IDENT . '(' expresiones_opc ')'  (62)

	'('  shift 113
	THEN  reduce 41
	MAYORIGUAL  reduce 41
	MENORIGUAL  reduce 41
	DISTINTO  reduce 41
	IGUALDAD  reduce 41
	AND  reduce 41
	OR  reduce 41
	DO  reduce 41
	'='  reduce 41
	'<'  reduce 41
	'>'  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'%'  reduce 41
	')'  reduce 41
	'['  reduce 41
	']'  reduce 41
	'.'  reduce 41
	';'  reduce 41
	','  reduce 41


state 82
	sentencia : PRINT expresion . ';'  (28)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (55)
	expresion : expresion . MAYORIGUAL expresion  (56)
	expresion : expresion . AND expresion  (57)
	expresion : expresion . OR expresion  (58)
	expresion : expresion . IGUALDAD expresion  (60)
	expresion : expresion . DISTINTO expresion  (61)

	MAYORIGUAL  shift 93
	MENORIGUAL  shift 94
	DISTINTO  shift 95
	IGUALDAD  shift 96
	AND  shift 97
	OR  shift 98
	'<'  shift 100
	'>'  shift 101
	'+'  shift 102
	'-'  shift 103
	'*'  shift 104
	'/'  shift 105
	'%'  shift 106
	'['  shift 107
	'.'  shift 108
	';'  shift 114
	.  error


state 83
	sentencia : IF expresion . THEN sentencias_opc END IF ';'  (34)
	sentencia : IF expresion . THEN sentencias_opc ELSE sentencias_opc END IF ';'  (35)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (55)
	expresion : expresion . MAYORIGUAL expresion  (56)
	expresion : expresion . AND expresion  (57)
	expresion : expresion . OR expresion  (58)
	expresion : expresion . IGUALDAD expresion  (60)
	expresion : expresion . DISTINTO expresion  (61)

	THEN  shift 115
	MAYORIGUAL  shift 93
	MENORIGUAL  shift 94
	DISTINTO  shift 95
	IGUALDAD  shift 96
	AND  shift 97
	OR  shift 98
	'<'  shift 100
	'>'  shift 101
	'+'  shift 102
	'-'  shift 103
	'*'  shift 104
	'/'  shift 105
	'%'  shift 106
	'['  shift 107
	'.'  shift 108
	.  error


state 84
	sentencia : WHILE expresion . DO sentencias_opc END WHILE ';'  (33)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (55)
	expresion : expresion . MAYORIGUAL expresion  (56)
	expresion : expresion . AND expresion  (57)
	expresion : expresion . OR expresion  (58)
	expresion : expresion . IGUALDAD expresion  (60)
	expresion : expresion . DISTINTO expresion  (61)

	MAYORIGUAL  shift 93
	MENORIGUAL  shift 94
	DISTINTO  shift 95
	IGUALDAD  shift 96
	AND  shift 97
	OR  shift 98
	DO  shift 116
	'<'  shift 100
	'>'  shift 101
	'+'  shift 102
	'-'  shift 103
	'*'  shift 104
	'/'  shift 105
	'%'  shift 106
	'['  shift 107
	'.'  shift 108
	.  error


state 85
	sentencia : RETURN ';' .  (32)

	.  reduce 32


state 86
	sentencia : RETURN expresion . ';'  (31)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (55)
	expresion : expresion . MAYORIGUAL expresion  (56)
	expresion : expresion . AND expresion  (57)
	expresion : expresion . OR expresion  (58)
	expresion : expresion . IGUALDAD expresion  (60)
	expresion : expresion . DISTINTO expresion  (61)

	MAYORIGUAL  shift 93
	MENORIGUAL  shift 94
	DISTINTO  shift 95
	IGUALDAD  shift 96
	AND  shift 97
	OR  shift 98
	'<'  shift 100
	'>'  shift 101
	'+'  shift 102
	'-'  shift 103
	'*'  shift 104
	'/'  shift 105
	'%'  shift 106
	'['  shift 107
	'.'  shift 108
	';'  shift 117
	.  error


state 87
	sentencia : READ expresion . ';'  (29)
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (55)
	expresion : expresion . MAYORIGUAL expresion  (56)
	expresion : expresion . AND expresion  (57)
	expresion : expresion . OR expresion  (58)
	expresion : expresion . IGUALDAD expresion  (60)
	expresion : expresion . DISTINTO expresion  (61)

	MAYORIGUAL  shift 93
	MENORIGUAL  shift 94
	DISTINTO  shift 95
	IGUALDAD  shift 96
	AND  shift 97
	OR  shift 98
	'<'  shift 100
	'>'  shift 101
	'+'  shift 102
	'-'  shift 103
	'*'  shift 104
	'/'  shift 105
	'%'  shift 106
	'['  shift 107
	'.'  shift 108
	';'  shift 118
	.  error


state 88
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . MENORIGUAL expresion  (55)
	expresion : expresion . MAYORIGUAL expresion  (56)
	expresion : expresion . AND expresion  (57)
	expresion : expresion . OR expresion  (58)
	expresion : NOT expresion .  (59)
	expresion : expresion . IGUALDAD expresion  (60)
	expresion : expresion . DISTINTO expresion  (61)

	'['  shift 107
	'.'  shift 108
	THEN  reduce 59
	MAYORIGUAL  reduce 59
	MENORIGUAL  reduce 59
	DISTINTO  reduce 59
	IGUALDAD  reduce 59
	AND  reduce 59
	OR  reduce 59
	DO  reduce 59
	'='  reduce 59
	'<'  reduce 59
	'>'  reduce 59
	'+'  reduce 59
	'-'  reduce 59
	'*'  reduce 59
	'/'  reduce 59
	'%'  reduce 59
	')'  reduce 59
	']'  reduce 59
	';'  reduce 59
	','  reduce 59


state 89
	expresion : CTYPE '(' . tipo ',' expresion ')'  (63)

	IDENT  shift 36
	INTEGER  shift 37
	REAL  shift 38
	CHARACTER  shift 39
	.  error

	tipo  goto 119


state 90
	expresion : expresion . '+' expresion  (45)
	expresion : expresion . '-' expresion  (46)
	expresion : expresion . '*' expresion  (47)
	expresion : expresion . '/' expresion  (48)
	expresion : expresion . '%' expresion  (49)
	expresion : expresion . '[' expresion ']'  (50)
	expresion : expresion . '.' expresion  (51)
	expresion : expresion . '<' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : '(' expresion . ')'  (54)
	expresion : expresion . MENORIGUAL expresion  (55)
	expresion : expresion . MAYORIGUAL expresion  (56)
	expresion : expresion . AND expresion  (57)
	expresion : expresion . OR expresion  (58)
	expresion : expresion . IGUALDAD expresion  (60)
	expresion : expresion . DISTINTO expresion  (61)

	MAYORIGUAL  shift 93
	MENORIGUAL  shift 94
	DISTINTO  shift 95
	IGUALDAD  shift 96
	AND  shift 97
	OR  shift 98
	'<'  shift 100
	'>'  shift 101
	'+'  shift 102
	'-'  shift 103
	'*'  shift 104
	'/'  shift 105
	'%'  shift 106
	')'  shift 120
	'['  shift 107
	'.'  shift 108
	.  error


state 91
	definicion_procedimiento : PROC IDENT '(' listaParametrosOpcional ')' definiciones_variable_opc sentencias_opc END . PROC ';'  (19)

	PROC  shift 121
	.  error


state 92
	sentencias : sentencias sentencia .  (26)

	.  reduce 26


state 93
	expresion : expresion MAYORIGUAL . expresion  (56)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 122


state 94
	expresion : expresion MENORIGUAL . expresion  (55)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 123


state 95
	expresion : expresion DISTINTO . expresion  (61)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 124


state 96
	expresion : expresion IGUALDAD . expresion  (60)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 125


state 97
	expresion : expresion AND . expresion  (57)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 126


state 98
	expresion : expresion OR . expresion  (58)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 127


state 99
	sentencia : expresion '=' . expresion ';'  (30)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 128


state 100
	expresion : expresion '<' . expresion  (52)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 129


state 101
	expresion : expresion '>' . expresion  (53)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 130


state 102
	expresion : expresion '+' . expresion  (45)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 131


state 103
	expresion : expresion '-' . expresion  (46)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 132


state 104
	expresion : expresion '*' . expresion  (47)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 133


state 105
	expresion : expresion '/' . expresion  (48)

	IDENT  shift 81
	REAL  shift 61
	CHARACTER  shift 62
	CTE_ENTERA  shift 63
	NOT  shift 69
	CTYPE  shift 70
	'('  shift 71
	.  error

	expresion  goto 134

